Ads fifteensuared scraper

--- a/.github/workflows/weekly-benchmark.yml
+++ b/.github/workflows/weekly-benchmark.yml
@@ -1,6 +1,9 @@
-name: Weekly Cryptic Benchmark
+name: Cryptic Benchmark
 
 on:
+  push:
+    branches:
+      - main
   schedule:
     # Run every Sunday at 6 AM UTC
     - cron: '0 6 * * 0'
